src/renderer/index.css
/* Common */
* { margin: 0; padding: 0; user-select: none; }
html { height: 100%; color: white; }
body { height: 100%; }

/* App */
.layout.main {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  /* background-color: #252526; */
  background-color: rgb(24,24,24);
  font-size: 13px;
}

/* SplitView */
.split-view {
  position: relative;
  width: 100%;
  height: 100%;
}

.split-view .sash-container {
  position: absolute;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.split-view .sash-container .sash {
  pointer-events: initial;
}

.sash {
  position: absolute;
  z-index: 35;
  touch-action: none;
}

.sash.mac.vertical { cursor: col-resize; }
.sash.vertical.minimum { cursor: e-resize; }
.sash.vertical.maximum { cursor: w-resize; }

.sash.mac.horizontal { cursor: row-resize; }
.sash.horizontal.minimum { cursor: s-resize; }
.sash.horizontal.maximum { cursor: n-resize; }

.sash.disabled {
  cursor: default !important;
  pointer-events: none !important;
}

.sash.vertical {
  cursor: ew-resize;
  top: 0;
  width: 4px;
  height: 100%;
}

.sash.horizontal {
  cursor: ns-resize;
  left: 0;
  width: 100%;
  height: 4px;
}

.sash:before {
  content: '';
  pointer-events: none;
  position: absolute;
  width: 100%;
  height: 100%;
  background: transparent;
}

.sash.hover:before,
.sash.active:before {
  background: rgb(0 120 212); /* var(--vscode-sash-hoverBorder); */
  transition: background-color 0.1s ease-out;
}

.sash.vertical:before {
  width: 4px;
  left: calc(50% - (4px / 2));
}

.sash.horizontal:before {
  height: 4px;
  top: calc(50% - (4px / 2));
}

.split-view .split-view-container {
  width: 100%;
  height: 100%;
  white-space: nowrap;
  position: relative;
}

.split-view .split-view-container .split-view-view {
  white-space: initial;
  position: absolute;
  /* display: flex; */
}

.split-view .split-view-container .split-view-view:not(.visible) {
  display: none;
}

.split-view.vertical > .split-view-container .split-view-view {
  width: 100%;
}

.split-view.horizontal > .split-view-container .split-view-view {
  height: 100%;
}

.split-view > .split-view-container > .split-view-view:not(:first-child)::before {
  content: ' ';
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  background-color: rgba(255, 255, 255, 0.09);
}

.split-view.horizontal > .split-view-container > .split-view-view:not(:first-child)::before {
  height: 100%;
  width: 1px;
}

.split-view.vertical > .split-view-container > .split-view-view:not(:first-child)::before {
  height: 1px;
  width: 100%;
}

/* PaneView */
.pane-view { height: 100%; }

.pane-view .pane {
  height: 100%;
}

.pane-view .pane .pane-header {
  height: 22px;
  font-size: 11px;
  font-weight: bold;
  overflow: hidden;
  display: flex;
  cursor: pointer;
  align-items: center;
}

.pane-view .pane .pane-header .title {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-size: 11px;
  /* min-width: 85px; *//* 85*4/5=68px */
  text-transform: uppercase;
}

.pane-view .pane .pane-header .actions {
  margin-left: auto;
}

.pane-view .pane .pane-header .arrow {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 22px; height: 22px;
}

.pane-view .pane.expanded .pane-header .arrow {
  transform: rotate(90deg);
}

.pane-view .pane .pane-header .arrow {
  transform: rotate(0);
}

.pane-view .pane.hover .pane-header ul {
  display: flex;
}

.pane-view .pane .pane-header ul {
  display: none;
  /* display: flex; */
  list-style-type: none;
  margin: 0 auto;
  height: 100%;
  width: 100%;
  align-items: center;
}

.pane-view .pane .pane-header ul li { margin-right: 4px; }
.pane-view .pane .pane-header ul li a {
  width: 14px; height: 14px; font-size:14px; padding: 1px;
  /* width: 16px; height: 16px; font-size:16px; padding: 3px; */
}

.pane-view .pane .pane-body { height: calc(100% - 22px); }

.grid-branch-node { height: 100%; }

/* Titlebar */
.part.titlebar {
  /* padding-left: 80px; */
  border-bottom: 1px solid rgb(43, 43, 43);
  height: 34px;
  width: 100%;
  display: flex;
  /* background-color: grey; */
  flex-direction: column;
  user-select: none;
}

.titlebar .menubar {
  flex: 1;
  position: relative;
  -webkit-app-region: drag;
  display: flex;
  line-height: 22px;
}

.titlebar .menubar .left {
  display: flex;
  align-items: center;
  font-size: 14px;
  outline: none;
}

.menubar .button {
  position: relative;
  -webkit-app-region: no-drag;
  white-space: nowrap;
  color: rgb(204 204 204);
}

.menubar .button:hover, .menubar .button.on {
  /* background-color: rgb(227,227,227); */
  background-color: rgba(255, 255, 255, 0.16);
  border-radius: 3px;
}

.menubar .button.hamburger {
  display: none;
  width: 22px;
  height: 22px;
  padding: 0 8px;
  align-items: center;
  justify-content: center;
  /* vertical-align: sub; */
}

/* @media (max-width:716px) {
  .menubar .button { display: none; }
  .menubar .button.hamburger {
    display: flex;
  }
} */

.menubar .button .title {
  padding: 0px 8px;
}

.menubar .button .menubox {
  display: none;
  position: absolute;
  z-index: 5;
  /* background: rgb(242,242,242);
  border: 1px solid rgb(185,185,185); */
  background-color: rgb(31 31 31);
  border: 1px solid rgb(69 69 69);
  left: 0;
  top: 100%;
}

.menubar .button .sub.menubox {
  left: calc(100% + 0px);
  top: -4px;
}

.menubar .button.on > .menubox { display: block; }

.menubar .button ul { padding: 4px 0; border-radius: 5px; }

.menubar .button ul li {
  list-style: none;
  position: relative;
  align-items: center;
}

.menubar .button ul li a { display: flex;
  margin: 0 4px;
  padding: 0 8px;
}
.menubar .button ul li.disabled {
  /* color: rgb(204 204 204); */
  color: lightgray;
}

.menubar .button ul li a.separator {
  border-bottom: 1px solid;
  /* border-bottom-color: rgb(215,215,215); */
  border-bottom-color: rgb(69 69 69);
  margin: 5px;
  padding: 0;
  height: 0;
}
/* ... */

